# analytics

./: .gitignore  README.md  hidingVaults.py  pyproject.toml
gnosis-analysis/: gnosis_analysis.ipynb  protocolActivityFinal.csv  protocolActivityFinal.npy
indexcoop-analysis/: indexcoop_analysis.ipynb  rebalExecsFinal.csv  rebalExecsFinal.npy  tradeRebalExecs.csv  tradeRebalExecsfilteredTransactions.npy
ninjaFills/: ctokens.json  ninjaFills.npy  ninjaFills.py
ninjaFills/ABI/: HidingVaultNFT.json
stakewise-analysis/: finalResults.csv  stakewise_Analysis.ipynb
tokenomics/: Home.py  README.md  pyproject.toml  tokenomics.ipynb
tokenomics/markdown/: Home.md
tokenomics/models/: rook_bid.py
tokenomics/pages/: 2_♜_ROOK_Bid_Playground.py
tokenomics/util/: addresses.py  balances.py  contracts.py  params.py
trade-analysis/: wash_trades.ipynb
treasury-flashloan-analysis/: assetMarks.csv  combinedAnalysis.ipynb  identitiesAnonymised.csv  ninjaBorrowsWithPnL.csv
volume-analysis/: Daily_Supply-Side_Revenue_Vs._Protocol_Revenue_In_The_Past_180_Days._2022-06-29.csv  db.py
